# PeripheralSuite

./: .gitignore  .gitmodules  README.md
.trae/rules/: git-commit-message.md
Docs/: README_en.md  commit-standard.md  development-experience.md  development-prompt.md  development-standard.md  readme-standard.md
PeripheralSuite/core/: CMakeLists.txt
PeripheralSuite/core/interface/: peripheral_suite.c  peripheral_suite.h
PeripheralSuite/core/src/as5600/: as5600.c  as5600.h
PeripheralSuite/core/src/buzzer/: buzzer.c  buzzer.h
PeripheralSuite/core/src/common/: peripheral_suite_common.h
PeripheralSuite/core/src/devices/as5600/: as5600.c
PeripheralSuite/core/src/devices/buzzer/: buzzer.h
PeripheralSuite/core/src/devices/icm42688/: icm42688_reg.h
PeripheralSuite/core/src/devices/ina226/: ina226.c
PeripheralSuite/core/src/devices/mt6816/: mt6816.c  mt6816.h
PeripheralSuite/core/src/devices/ntc/: ntc.c
PeripheralSuite/core/src/devices/ws2812/: ws2812.c  ws2812.h
PeripheralSuite/core/src/icm42688/: icm42688.c  icm42688.h
PeripheralSuite/core/src/ina226/: ina226.c  ina226.h
PeripheralSuite/core/src/middleware/spi/: spi.h
PeripheralSuite/core/src/ntc/: ntc.h
PeripheralSuite/core/src/ws2812/: ws2812.c
